# COMP4300

./: CMakeLists.txt  build.bat
data/: config.txt
src/: Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  main.cpp
src/Manager/EntityManager/: EntityDefines.h  EntityManager.cpp  EntityManager.h
src/Manager/EntityManager/Entity/: DOD_Entity.h  OOP_Entity.cpp  OOP_Entity.h  Player.h
src/Manager/EntityManager/Entity/Component/: CCollision.h  CInput.h  CLifespan.h  CScore.h  CShape.h  CTransform.h  Component.h
src/Math/: Vector.h
src/System/: SLifepan.h  SRender.h
src/imgui/: imconfig.h
src/manager/: EntityDefines.h  EntityManager.h  OOP_Entity.cpp
src/utils/: simd_macro.h
